Fix select2 multiselect badges align

--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -89,6 +89,9 @@
     border-color: $input-border-color;
     background-image: none;
     background-color: $input-bg;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 
     .select2-search-choice {
       @extend .badge;
